--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </head>
     <body>
     <header>
-	<h1>Page title</h1>
+	<h1Web Tools Version Control LAB2</h1>
+    <h2>Author: Nicholas Welch</h2>
     </header>
     <nav id="pageNav">
     </nav>
