--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
     <header>
-	<h1Web Tools Version Control LAB2</h1>
+	<h1>Web Tools Version Control LAB2</h1>
     <h2>Author: Nicholas Welch</h2>
     </header>
     <nav id="pageNav">
