--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
 	<h1>Web Tools Version Control LAB2</h1>
     <h2>Author: Nicholas Welch</h2>
+        <h2>This includes My First Branch. Background is Green!</h2>
     </header>
     <nav id="pageNav">
     </nav>
